/*
Copyright Â© 2021-2022 Infinite Devices GmbH, Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package infinimesh.node;

import "google/api/annotations.proto";
import "pkg/node/proto/accounts/accounts.proto";

message TokenRequest {
  infinimesh.node.accounts.Credentials auth = 1;
  int32 exp = 2;
}

message TokenResponse {
  string token = 1;
}

service AccountsService {
  rpc Token(TokenRequest) returns (TokenResponse) {
      option (google.api.http) = {
          post: "/token"
          body: "*"
      };
  };
  rpc Create(infinimesh.node.accounts.CreateRequest) returns (infinimesh.node.accounts.CreateResponse) {
    option (google.api.http) = {
        put: "/accounts"
        body: "*"
    };
  };
}