syntax = "proto3";

package infinimesh.deviceregistry;

option go_package = "registrypb";

message Device {
  string name = 1;
  bool enabled = 3;
  Certificate certificate = 4;
}

message CreateRequest {
  Device device = 1;
}

message Certificate {
  string pem_data = 1;
  string algorithm = 2;
  uint64 valid_to = 3;
}

message CreateResponse {
  bytes fingerprint = 1;
}

message GetByFingerprintRequest {
  bytes fingerprint = 1;
}

message GetByFingerprintResponse {
  string name = 1;
}

message GetByNameRequest {
  string name = 1;
}

message GetByNameResponse {
  string name = 1;
  bool enabled = 3;
}

message ListDevicesRequest {}

message ListResponse {
  repeated Device devices = 1;
}

message DeleteRequest {
  string name = 1;
}

message DeleteResponse {}


service Devices {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetByFingerprint(GetByFingerprintRequest) returns (GetByFingerprintResponse);
  rpc GetByName(GetByNameRequest) returns (GetByNameResponse);
  rpc List(ListDevicesRequest) returns (ListResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}
